Revert "Fix for 100vh on mobile"
This reverts commit 7be789e7afc902d754cdb9eb4cf6a97b04b2706c.

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,9 +1,3 @@
-html {
-	height: -webkit-fill-available;
-}
-
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
-	min-height: 100vh;
-	min-height: -webkit-fill-available;
 }
